syntax = "proto3";
package cloudserver.model;

message Node{
    int32 id = 1;
    int32 sensorsPort = 2;
    int32 otherNodesPort = 3;
    int32 xPos = 4;
    int32 yPos = 5;
    string selfIp = 6;
}

message Nodes{
    repeated Node nodes = 1;
}

/*message NodeMeasurement{
    double value=1;
    int64 timestamp=2;
}
message NodeMeasurements{
    repeated NodeMeasurement measurements = 1;
}*/

message NodeMeasurement{
    double value=2;
    int64 timestamp=3;
}
message NodeMeasurementMessage{
    Node node=1;
    NodeMeasurement statistic=2;
}
message NodeLocalStatistics{
    Node node=1;
    repeated NodeMeasurement locals=2;
}
message LocalsGlobalsMessage{
    Node sender=1;
    NodeMeasurement global=2;
    repeated NodeLocalStatistics nodesLocals=3;
}
message LastLocalsGlobals{
    NodeMeasurements globals=1;
    NodeMeasurements locals=2;
}
message NodeMeasurements{
    repeated NodeMeasurement statistics = 1;
}
message AggregatedStatistic{
    double devstd = 1;
    double mean = 2;
}

enum MessageType{
    HELLO = 0;
    WELCOME = 1;
    LOCALSTATISTIC =2;
    ELECTIONTIME=3;
    ELECTIONRECEIVED=4;
    ELECTIONRESULT=5;
    LOCALSGLOBALS=6;
}
enum ErrorType{
    COORD_NOT_ALLOWED=0;
    DUPLICATED_ID=1;
    UNEXPECTED_ERROR=2;
}
message InitializationMessage{
    oneof errorOrResult{
        ErrorType errortype=1;
        NodeInsertedResponse response=2;
    }
}

message HelloResponse{
    MessageType typemessage =1;
    bool iscoordinator=2;
}

message MessageRequest{
    MessageType typemessage=1;
    oneof possibleMessages{
        Node node=2;
        NodeMeasurementMessage statisticMsg=3;
        LocalsGlobalsMessage localsglobalsUpdate=4;
    }
}

message NodeInsertedResponse{
    Node father=1;
    Nodes allNodes=2;
}
